la till bilder, ändrade flexboxen, la till ny font, gjorde stora nyheten till en länk

--- a/code/index.html
+++ b/code/index.html
@@ -8,10 +8,10 @@
   <link rel="icon" href="logo.png" type="image/gif" sizes="16x16">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
+<link href="https://fonts.googleapis.com/css2?family=Libre+Franklin&family=Roboto:wght@500&display=swap" rel="stylesheet">
 
 <body>
 
-  
   <!-- Logo and navbar -->
   <header>
     <img class="logo" src="Malmöposten_logo.png" meta=logo>
@@ -31,17 +31,24 @@
     </nav>
   </header>
 
- 
+
   <!-- The big news content -->
-  <article class="big-news">
-    <img class="img-big-news" src="./bilder/regn.jpg" meta=regn>
-    <div class="big-news-text">
-      <h3>VÄDER</h3>
-      <h1>Så länge stannar sommarvärmen</h1>
-      <p>Metreologen varnar: "Hösten är snart i Malmö på riktigt"</p>
-    </div>
-  
-  </article>
+  <a href="#">
+    <article class="big-news">
+      <img class="img-big-news" src="./bilder/regn-unsplash.jpg" meta=regn>
+      <div class="big-news-text">
+        <h3>VÄDER</h3>
+        <h1>Meterologen: Nu kommer hösten</h1>
+        <p class="heading">Regn och riktigt kyliga temperaturer väntar</p>
+        <p class="artikel">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, nostrum ratione. Adipisci
+          enim assumenda, dolores laboriosam quisquam corrupti unde eveniet voluptatum odit nihil numquam consequatur.
+          Illo porro voluptatibus odio similique consequatur totam qui non repudiandae culpa tenetur? Exercitationem
+          consequatur facere consequuntur et! Ab adipisci aliquid sapiente quidem excepturi ullam sed a possimus laborum
+          qui soluta eligendi illum vero maiores perspiciatis eius ipsa tempora delectus est quod, commodi ad, magnam
+          explicabo. Ab consectetur.</p>
+      </div>
+    </article>
+  </a>
 
 
   <!-- The news grid -->
@@ -53,16 +60,16 @@
     <section class="card-container">
       <div class="card">
         <a href="#">
-          <img class="img-news-grid" src="./bilder/regn.jpg" meta=regn>
+          <img class="img-news-grid" src="./bilder/malmöfestivalen.jpg" meta=malmöfestivalen>
           <h4>28:e augusti 2020, 10.31</h4>
-          <h2>Malmö FF vidare i Champions League</h2>
-          <p>Anders Christiansen hjälte i kvaldramat</p>
+          <h2>Malmöfestivalen siktar mot 2021</h2>
+          <p>"Vi kommer bli större och bättre än nånsin"</p>
         </a>
       </div>
 
       <div class="card">
         <a href="#">
-          <img class="img-news-grid" src="./bilder/regn.jpg" meta=regn>
+          <img class="img-news-grid" src="./bilder/pernillamc.jpg" meta=regn>
           <h4>28:e augusti 2020, 10.31</h4>
           <h2>Pernilla Månsson Colt lämnar trädgårdstider</h2>
           <p>Kollegan Malin Persson: "Det känns supertrist"</p>
@@ -71,7 +78,7 @@
 
       <div class="card">
         <a href="#">
-          <img class="img-news-grid" src="./bilder/regn.jpg" meta=regn>
+          <img class="img-news-grid" src="./bilder/vaccin-unsplash.jpg" meta=vaccination>
           <h4>28:e augusti 2020, 10.31</h4>
           <h2>Nu förbereds vaccination mot Corona</h2>
           <p>Så många doser får SUS</p>
@@ -80,7 +87,7 @@
 
       <div class="card">
         <a href="#">
-          <img class="img-news-grid" src="./bilder/regn.jpg" meta=regn>
+          <img class="img-news-grid" src="./bilder/marta" meta=Marta>
           <h4>28:e augusti 2020, 10.31</h4>
           <h2>Marta återvänder till FC Rosengård</h2>
           <p>Stjärnan skriver på femårskontrakt</p>
@@ -89,7 +96,7 @@
 
       <div class="card">
         <a href="#">
-          <img class="img-news-grid" src="./bilder/regn.jpg" meta=regn>
+          <img class="img-news-grid" src="./bilder/svan-unsplash.jpg" meta=svan>
           <h4>28:e augusti 2020, 10.31</h4>
           <h2>Här går svanen till attack</h2>
           <p>Kanalsvanen är tillbaka</p>
@@ -98,7 +105,7 @@
 
       <div class="card">
         <a href="#">
-          <img class="img-news-grid" src="./bilder/regn.jpg" meta=regn>
+          <img class="img-news-grid" src="./bilder/inbrott-pixabay.jpg" meta=inbrott>
           <h4>28:e augusti 2020, 10.31</h4>
           <h2>Färre inbrott under corona</h2>
           <p>Positiva besked från polischefen</p>
@@ -107,29 +114,30 @@
 
       <div class="card">
         <a href="#">
-          <img class="img-news-grid" src="./bilder/regn.jpg" meta=regn>
+          <img class="img-news-grid" src="./bilder/kungensilvia.jpg" meta=kungen och silvia>
           <h4>28:e augusti 2020, 10.31</h4>
-          <h2>Kungen på besök i Skåne</h2>
+          <h2>Kungen och Silvia på besök i Skåne</h2>
           <p>Besöker scoutläger för andra året i rad</p>
         </a>
       </div>
 
       <div class="card">
         <a href="#">
-          <img class="img-news-grid" src="./bilder/regn.jpg" meta=regn>
+          <img class="img-news-grid" src="./bilder/amandajensen.jpg" meta=amanda-jensen>
           <h4>28:e augusti 2020, 10.31</h4>
           <h2>De tävlar i årets Melodifestival</h2>
           <p>Amanda Jensen gör oväntad comeback</p>
         </a>
       </div>
     </section>
-
-
   </main>
-  
+
   <footer>
     <h6>Sanna Dolck Wall</h1>
   </footer>
+
+
 </body>
+
 
 </html>
