Updated font-sizes. Started animation

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <img class="image-news1" src="./images/waterfall.png" alt="iclandic waterfall">
           <div class="pic-effect-title">SELJALANDSFOSS</div>
         </div>
-        <div class="description">What you need to know about the waterfalls</div>
+        <div class="description">Top 10 waterfalls</div>
       </div>
 
       <div class="other-news1 pic-effect">
@@ -76,10 +76,11 @@
     </section>
 
     <footer>
+      <div class="test">
       <p> This page was made as part of the Technigo front-end developer boot camp Fall 2020.</p>
       <p>Images and &copy; JOHANNA BLOM</p>
       </p>
-
+    </div>
     </footer>
   </body>
 </html>
