Redid Flexbox, cleaned up code, added photos

--- a/code/index.html
+++ b/code/index.html
@@ -10,7 +10,7 @@
     <header>
 
       <!-- Logo and navbar -->
-      <img src="Images/Resurs3.png" alt="Backstreet News Logo" />
+      <img src="./Images/Resurs3.png" alt="Backstreet News Logo" />
       <nav>
         <a href="#">Brian</a>
         <a href="#">Kevin</a>
@@ -28,47 +28,67 @@
     <main>
 
       <!-- The big news content -->
-      <section class="big-news row">
-        <img src="Images/bsb_group.jpg" alt="Backstreet Boys Image">
+      <section class="big-news">
         <div>
           <h2>Backstreet's back, alright!</h2>
           <p>Student poll shows Brian is the most popular Backstreet Boy</p>
         </div>
+        <img src="./Images/bsb_group.jpg" alt="Backstreet Boys Image">
       </section>
       
       <!-- The other news  -->
-      <section class="article-news">
+      <section class="small-news">
         <div>
           <h3>A blast from the past</h3>
           <p>What is your favourite Backstreet Boys' logo?</p>
         </div>
-        <section class="row">
+        <section class="article-container">
           <a href="#">
             <article>
-              <img src="Images/bsblogo2.png" alt="Backstreet Boys Logo">
+              <img src="./Images/bsblogo2.png" alt="Backstreet Boys Logo">
               <h4>This is one logo</h4>
-              <div></div>
             </article>
           </a>
           <a href="#">
             <article>
-              <img src="Images/bsblogo3.png" alt="Backstreet Boys Logo">
+              <img src="./Images/bsblogo3.png" alt="Backstreet Boys Logo">
               <h4>This is one logo</h4>
-              <div></div>
             </article>
           </a>
           <a href="#">
             <article>
-              <img src="Images/bsblogo4.png" alt="Backstreet Boys Logo">
+              <img src="./Images/bsblogo4.png" alt="Backstreet Boys Logo">
               <h4>This is one logo</h4>
-              <div></div>
             </article>
-           </a> 
-           <a href="#"> 
+          </a> 
+          <a href="#"> 
             <article>
-              <img src="Images/bsblogo5.png" alt="Backstreet Boys Logo">
+              <img src="./Images/bsblogo5.png" alt="Backstreet Boys Logo">
               <h4>This is one logo</h4>
-              <div></div>
+            </article>
+          </a>
+          <a href="#">
+            <article>
+              <img src="./Images/brian.jpg" alt="Backstreet Boy Brian">
+              <h4>Backstreet Boy Brian</h4>
+            </article>
+          </a>
+          <a href="#">
+            <article>
+              <img src="./Images/kevin.jpg" alt="Backstreet BoyKevin">
+              <h4>Backstreet Boy Kevin</h4>
+            </article>
+          </a>
+          <a href="#">
+            <article>
+              <img src="./Images/aj.jpg" alt="Backstreet Boys AJ">
+              <h4>Backstreet Boy AJ</h4>
+            </article>
+          </a> 
+          <a href="#"> 
+            <article>
+              <img src="./Images/howie.jpg" alt="Backstreet Boy Howie DOCTYPE">
+              <h4>Backstreet Boy Howie D</h4>
             </article>
           </a>
         </section>
