Added favicon, fixed images for mobile view

--- a/code/index.html
+++ b/code/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>The New Forker</title>
   <link rel="stylesheet" href="./style.css" />
+  <link rel="icon" type="image/png" href="./noun_fork.png"/>
   <!-- dont forget the meta tag for responsiveness -->
 </head>
 
@@ -50,8 +51,8 @@
     <!-- The other news  -->
     <section class="small-news">
       <div class="small-news-card">
-        <img src="./tiktok.jpeg" 
-        alt="">
+        <img src="./troopers-jon-tyson-eIhH7RTlTZA-unsplash.jpg" 
+        alt="Image of storm troopers and Anonymous.">
         <article>
           <a href="#">Books & Culture</a>
           <h2>Lorem ipsum dolor sit amet, 
@@ -76,8 +77,8 @@
         </article>
       </div>
       <div class="small-news-card">
-        <img src="./dinner.jpg" 
-        alt="Table with food.">
+        <img src="./grafitti.jpg" 
+        alt="Colorful grafitti.">
         <article>
           <a href="#">Goings On</a>
           <h2>Lorem ipsum dolor sit amet, 
@@ -89,7 +90,7 @@
         </article>
       </div>
       <div class="small-news-card">
-        <img src="./dinner.jpg" alt="Table with food.">
+        <img src="./paintings-at-museum.jpg" alt="Museum with paintings.">
         <article>
           <a href="#">Fiction & Poetry</a>
           <h2>Lorem ipsum dolor sit amet, 
@@ -103,11 +104,11 @@
     </section>
   </main>
   <footer>
-    <p>- author - 
-      <br><b>rebkova</b>
-      <br>Frontend Developer in the making 
-      <br>Technigo student
-      <br><b>email:</b> example@email.com</p>
+    <p><b>rebkova</b>
+      <br>.
+      <br>. 
+      <br>.
+    </p>
   </footer>
 </body>
 
