HTMK: Added hamburger menu and nav in header. CSS: Added colour to H2. Adjusted header parent flex properties. Added border to header. Updated header child with logo and title styling. Added hamburger styling. Added media querie min-width: 768px.

--- a/code/index.html
+++ b/code/index.html
@@ -14,9 +14,23 @@
     <!-- HEADER -->
     <header class="header-parent">
         <div class= "header-child">
-            <img src="Heart-speechbubbble.svg" alt="Image of positive news logo">
-            <h1>POSITIVE NEWS</h1>
+              <img src="Heart-speechbubbble.svg" alt="Image of positive news logo">
+              <h1>POSITIVE NEWS</h1>
         </div>
+
+            <!-- Container for the hamburger inside the circle -->
+            <div class="hamburger-menu">
+                  <div></div>
+                  <div></div>
+                  <div></div>
+            </div>
+
+            <nav>
+              <a href="#">HOME</a>
+              <a href="#">SECTIONS</a>
+              <a href="#">ABOUT</a>
+              <a href="#">CONTACT</a>
+            </nav>
     </header>
 
    <!-- MAIN -->
