--- a/code/index.html
+++ b/code/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" sizes="16x16" href="favicon.png">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Espresso Crema</title>
 </head>
 <body>
@@ -38,9 +39,7 @@
  </a>
 </section>
 
-<button> 
-    <a href="#top" class="myBtn" title="Go to top">UP</a>
-</button>
+<a href="#top" class="myBtn" title="Go to top">⌃</a>
 
 <section class="cards-container">
   <section class="container">
@@ -98,6 +97,18 @@
       </a>
      </section>
  </section>
+</section>
+
+<!--SOCIAL MEDIA ROW-->
+  <section class="icon-row">
+    <div class="social-menu">
+     <ul>
+         <li> <a href="#"><i class="fa fa-facebook"></i></a></li>
+         <li> <a href="#"><i class="fa fa-twitter"></i></a></li>
+         <li> <a href="#"><i class="fa fa-instagram"></i></a></li>
+         <li> <a href="#"><i class="fa fa-youtube"></i></a></li>
+     </ul>
+    </div>
 </section>
 
 <!--FOOTER-->
