Updated folder structure for pictures

--- a/code/index.html
+++ b/code/index.html
@@ -8,11 +8,16 @@
     <link href="https://fonts.googleapis.com/css2?family=Baloo+Tamma+2:wght@500&display=swap" rel="stylesheet">
     <!-- Meta tag for responsiveness -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Favicon stuff-->
+    <link rel="apple-touch-icon" sizes="180x180" href="../assets/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="../assets/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="../assets/favicon-16x16.png">
+  <link rel="manifest" href="../assets/site.webmanifest">
   </head>
   <body>
     <header>
        <!-- Logo and navbar -->
-      <img class= "icon" src ="./icon-corona-black.png" alt="Corona virus">
+      <img class= "icon" src ="../assets/icon-corona-black.png" alt="Corona virus">
       <h1> hashtagCORONA</h1>
       <nav>
         
@@ -26,41 +31,41 @@
     <div class="navbar_tablet">
       <a href="https://www.worldometers.info/coronavirus/?">Corona cases</a>
       <a href="https://www.folkhalsomyndigheten.se/smittskydd-beredskap/utbrott/aktuella-utbrott/covid-19/statistik-och-analyser/bekraftade-fall-i-sverige/">FHM</a>
-      <img class= "nav_icon" src ="./icon-corona-black.png" alt="Corona virus">
+      <img class= "nav_icon" src ="../assets/icon-corona-black.png" alt="Corona virus">
       <a href="https://www.youtube.com/watch?v=bqx19f0ceUo">Corona TikTok Dance</a>
       <a href="https://www.who.int/emergencies/diseases/novel-coronavirus-2019">WHO</a>
   </div>
 </header>
   <!-- The big news content -->
     <section class="big-news">
-        <div class="news"><img src="./corona_7.jpg" alt="Corona virus"></div>
+        <div class="news"><img src="../assets/corona_7.jpg" alt="Corona virus"></div>
         <div class="news"><p>According to the CDC, there is no specific antiviral treatment recommended for infection with novel coronavirus. Anyone infected with the virus should receive supportive care to help relieve symptoms.The CDC recommends the following prevention measures:
           Wash your hands often with soap and water for at least 20 seconds. 
           </p></div>
     </section>
-
+<hr>
     <!-- News card grid-->
     <div class="news_cards">
-      <div class="card"><img src="./corona_1.jpg" alt="Stay at home">How to handle Corona from home</div>
-      <div class="card"><img src="./corona_2.jpg" alt="Corona game">What does the most of us do at home</div>
-      <div class="card"><img src="./corona_3.jpg" alt="Social distancing"> Keep your distance</div>
-      <div class="card"><img src="./corona_4.jpg" alt="Social distancing"> Keep your distance</div>
-      <div class="card"><img src="./corona_5.jpg" alt="Mask and hand alcohol">Can we prevent Corona?</div>
-      <div class="card"><img src="./corona_6.jpg" alt="Mask">Can masks prevent the spreding of Corona ?</div>
-      <div class="card"><img src="./corona_bignews.jpg" alt="Coronavirus">Where did the Corona virus come from?</div>
-      <div class="card"><img src="./corona_8.jpg" alt="Pills">Can vitamins prevent Corona? </div>
+      <div class="card"><img src="../assets/corona_1.jpg" alt="Stay at home">How to handle Corona from home</div>
+      <div class="card"><img src="../assets/corona_2.jpg" alt="Corona game">What does the most of us do at home</div>
+      <div class="card"><img src="../assets/corona_3.jpg" alt="Social distancing"> Keep your distance</div>
+      <div class="card"><img src="../assets/corona_4.jpg" alt="Social distancing"> Keep your distance</div>
+      <div class="card"><img src="../assets/corona_5.jpg" alt="Mask and hand alcohol">Can we prevent Corona?</div>
+      <div class="card"><img src="../assets/corona_6.jpg" alt="Mask">Can masks prevent the spreding of Corona ?</div>
+      <div class="card"><img src="../assets/corona_bignews.jpg" alt="Coronavirus">Where did the Corona virus come from?</div>
+      <div class="card"><img src="../assets/corona_8.jpg" alt="Pills">Can vitamins prevent Corona? </div>
     </div>
 
      <!-- Footer-->
     <footer>
         <div class="instagram">
-        <a href="https://www.instagram.com/marjaana_star/?hl=en" target="_blank"><img src="./instagram-icon.png" alt="Click to visit us on Instagram"></a>
+        <a href="https://www.instagram.com/marjaana_star/?hl=en" target="_blank"><img src="../assets/instagram-icon.png" alt="Click to visit us on Instagram"></a>
       </div>
       <div class="github">
-        <a href="https://github.com/MayaBlixt" target="_blank"><img src="./Github_icon.png" alt="Click to visit us on Github"></a>
+        <a href="https://github.com/MayaBlixt" target="_blank"><img src="../assets/Github_icon.png" alt="Click to visit us on Github"></a>
       </div>
       <div class="linkedin">
-        <a href="https://www.linkedin.com/in/marjaana-tienaho-0576b915/" target="_blank"><img src="./linkedin_icon.png" alt="Click to visit me on Linkedin"></a>
+        <a href="https://www.linkedin.com/in/marjaana-tienaho-0576b915/" target="_blank"><img src="../assets/linkedin_icon.png" alt="Click to visit me on Linkedin"></a>
       </div>
       </footer>
   </body>
