--- a/code/index.html
+++ b/code/index.html
@@ -67,32 +67,49 @@
               <h4>This is one logo</h4>
             </article>
           </a>
+        </section>
+      </section>
+
+      <section class="grid-wrapper">
+      <div>
+        <h3>A blast from the past</h3>
+        <p>What is your favourite Backstreet Boys' logo?</p>
+      </div>
+          <section class="grid-articles">
+          <div class="grid-article">
           <a href="#">
             <article>
               <img src="./Images/brian.jpg" alt="Backstreet Boy Brian">
               <h4>Backstreet Boy Brian</h4>
             </article>
           </a>
+        </div>
+        <div class="grid-article">
           <a href="#">
             <article>
-              <img src="./Images/kevin.jpg" alt="Backstreet BoyKevin">
-              <h4>Backstreet Boy Kevin</h4>
+              <img src="./Images/brian.jpg" alt="Backstreet Boy Brian">
+              <h4>Backstreet Boy Brian</h4>
             </article>
           </a>
+        </div>
+        <div class="grid-article">
           <a href="#">
             <article>
-              <img src="./Images/aj.jpg" alt="Backstreet Boys AJ">
-              <h4>Backstreet Boy AJ</h4>
-            </article>
-          </a> 
-          <a href="#"> 
-            <article>
-              <img src="./Images/howie.jpg" alt="Backstreet Boy Howie DOCTYPE">
-              <h4>Backstreet Boy Howie D</h4>
+              <img src="./Images/brian.jpg" alt="Backstreet Boy Brian">
+              <h4>Backstreet Boy Brian</h4>
             </article>
           </a>
-        </section>
+        </div>
+        <div class="grid-article">
+          <a href="#">
+            <article>
+              <img src="./Images/brian.jpg" alt="Backstreet Boy Brian">
+              <h4>Backstreet Boy Brian</h4>
+            </article>
+          </a>
+        </div>
       </section>
+    </section>
     </main> 
 
     <!-- Footer -->
