Big chunk of work:Header,Big news section,Flex gallery,Footer

--- a/code/index.html
+++ b/code/index.html
@@ -1,22 +1,138 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <title>Project 2: The News Site</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
     <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lexend+Giga&family=Noto+Sans+JP:wght@300&family=Oswald&family=Roboto:wght@300&display=swap"
+      rel="stylesheet"
+    />
   </head>
+  <header>
+    <img class="logo" src="./images/logo.svg" />
+    <nav>
+      <a class="order-1" href="#">About</a>
+      <a class="order-2" href="#">Subscribe</a>
+      <a class="order-3" href="#">Contribute</a>
+      <a class="order-4" href="#">Enjoy</a>
+    </nav>
+  </header>
+
   <body>
-    <header>
-      <!-- Some kind of logo and navbar -->
-    </header>
+    <div class="row">
+      <div class="bignews textbox">
+        <h1>We deliver great news daily!</h1>
+        <div class="button">EXPLORE</div>
+      </div>
+      <div class="bignews object-fit">
+        <a href="#">
+          <img
+            class="responsive"
+            src="./images/2.jpg"
+            alt="broken image"
+            width="100%"
+          />
+        </a>
+      </div>
+    </div>
 
-    <section class="big-news">
-      <!-- The big news content -->
-    </section>
+    <div class="container">
+      <div class="gallery">
+        <a class="gallery-item" href="#"
+          ><img src="./images/1.jpg" alt="Headshot of George Washington" /><span
+            class="text-wrapper"
+            ><span class="title">It is just science, baby!</span
+            ><span class="explanation"
+              >I'm baby tbh letterpress polaroid, asymmetrical roof party.</span
+            ></span
+          ></a
+        >
+        <a class="gallery-item" href="#"
+          ><img src="./images/2.jpg" alt="Headshot of George Washington" /><span
+            class="text-wrapper"
+            ><span class="title">It is just science, baby!</span
+            ><span class="explanation"
+              >I'm baby tbh letterpress polaroid, asymmetrical roof party.</span
+            ></span
+          ></a
+        >
 
-    <section class="">
-      <!-- The other news  -->
+        <a class="gallery-item" href="#"
+          ><img src="./images/1.jpg" alt="Headshot of George Washington" /><span
+            class="text-wrapper"
+            ><span class="title">It is just science, baby!</span
+            ><span class="explanation"
+              >I'm baby tbh letterpress polaroid, asymmetrical roof party.</span
+            ></span
+          ></a
+        >
+
+        <a class="gallery-item" href="#"
+          ><img src="./images/2.jpg" alt="Headshot of George Washington" /><span
+            class="text-wrapper"
+            ><span class="title">It is just science, baby!</span
+            ><span class="explanation"
+              >I'm baby tbh letterpress polaroid, asymmetrical roof party.</span
+            ></span
+          ></a
+        >
+
+        <a class="gallery-item" href="#"
+          ><img src="./images/1.jpg" alt="Headshot of George Washington" /><span
+            class="text-wrapper"
+            ><span class="title">It is just science, baby!</span
+            ><span class="explanation"
+              >I'm baby tbh letterpress polaroid, asymmetrical roof party.</span
+            ></span
+          ></a
+        >
+
+        <a class="gallery-item" href="#"
+          ><img src="./images/2.jpg" alt="Headshot of George Washington" /><span
+            class="text-wrapper"
+            ><span class="title">It is just science, baby!</span
+            ><span class="explanation"
+              >I'm baby tbh letterpress polaroid, asymmetrical roof party.</span
+            ></span
+          ></a
+        >
+
+        <a class="gallery-item" href="#"
+          ><img src="./images/1.jpg" alt="Headshot of George Washington" /><span
+            class="text-wrapper"
+            ><span class="title">It is just science, baby!</span
+            ><span class="explanation"
+              >I'm baby tbh letterpress polaroid, asymmetrical roof party.</span
+            ></span
+          ></a
+        >
+
+        <a class="gallery-item" href="#"
+          ><img src="./images/2.jpg" alt="Headshot of George Washington" /><span
+            class="text-wrapper"
+            ><span class="title">It is just science, baby!</span
+            ><span class="explanation"
+              >I'm baby tbh letterpress polaroid, asymmetrical roof party.</span
+            ></span
+          ></a
+        >
+
+        <a class="gallery-item" href="#"
+          ><img src="./images/1.jpg" alt="Headshot of George Washington" /><span
+            class="text-wrapper"
+            ><span class="title">It is just science, baby!</span
+            ><span class="explanation"
+              >I'm baby tbh letterpress polaroid, asymmetrical roof party.</span
+            ></span
+          ></a
+        >
+      </div>
+    </div>
+    <section class="footer">
+      <p class="footertext">NEWS COMPANY ©2020</p>
     </section>
   </body>
 </html>
