--- a/code/index.html
+++ b/code/index.html
@@ -38,22 +38,22 @@
 </header>
   <!-- The big news content -->
     <section class="big-news">
-        <div class="news"><img src="../assets/corona_7.jpg" alt="Corona virus"></div>
+        <div class="news"><img src="../assets/corona_3.jpg" alt="Corona virus"></div>
         <div class="news"><p>According to the CDC, there is no specific antiviral treatment recommended for infection with novel coronavirus. Anyone infected with the virus should receive supportive care to help relieve symptoms.The CDC recommends the following prevention measures:
           Wash your hands often with soap and water for at least 20 seconds. 
           </p></div>
     </section>
-<hr>
+
     <!-- News card grid-->
     <div class="news_cards">
-      <div class="card"><img src="../assets/corona_1.jpg" alt="Stay at home">How to handle Corona from home</div>
-      <div class="card"><img src="../assets/corona_2.jpg" alt="Corona game">What does the most of us do at home</div>
-      <div class="card"><img src="../assets/corona_3.jpg" alt="Social distancing"> Keep your distance</div>
-      <div class="card"><img src="../assets/corona_4.jpg" alt="Social distancing"> Keep your distance</div>
-      <div class="card"><img src="../assets/corona_5.jpg" alt="Mask and hand alcohol">Can we prevent Corona?</div>
-      <div class="card"><img src="../assets/corona_6.jpg" alt="Mask">Can masks prevent the spreding of Corona ?</div>
-      <div class="card"><img src="../assets/corona_bignews.jpg" alt="Coronavirus">Where did the Corona virus come from?</div>
-      <div class="card"><img src="../assets/corona_8.jpg" alt="Pills">Can vitamins prevent Corona? </div>
+      <div class="card"><img src="../assets/corona_1.jpg" alt="Stay at home"><p>Corona from home</p></div>
+      <div class="card"><img src="../assets/corona_2.jpg" alt="Corona game"><p>Games at home></p></div>
+      <div class="card"><img src="../assets/corona_bignews.jpg" alt="Social distancing"><p>Keep your distance</p></div>
+      <div class="card"><img src="../assets/corona_4.jpg" alt="Social distancing"><p> Social distance</p></div>
+      <div class="card"><img src="../assets/corona_5.jpg" alt="Mask and hand alcohol"><p> Will mask do it?</p></div>
+      <div class="card"><img src="../assets/corona_6.jpg" alt="Mask"><p>Preventing Corona</p></div>
+      <div class="card"><img src="../assets/corona_7.jpg" alt="Coronavirus"><p>Origin of Corona </p></div>
+      <div class="card"><img src="../assets/corona_8.jpg" alt="Pills"><p>Corona vitamins</p></div>
     </div>
 
      <!-- Footer-->
@@ -62,7 +62,7 @@
         <a href="https://www.instagram.com/marjaana_star/?hl=en" target="_blank"><img src="../assets/instagram-icon.png" alt="Click to visit us on Instagram"></a>
       </div>
       <div class="github">
-        <a href="https://github.com/MayaBlixt" target="_blank"><img src="../assets/Github_icon.png" alt="Click to visit us on Github"></a>
+        <a href="https://github.com/MayaBlixt" target="_blank"><img src="../assets/github-9-64.png" alt="Click to visit us on Github"></a>
       </div>
       <div class="linkedin">
         <a href="https://www.linkedin.com/in/marjaana-tienaho-0576b915/" target="_blank"><img src="../assets/linkedin_icon.png" alt="Click to visit me on Linkedin"></a>
